[package]
name = "snapman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version="1.0.147", features = ["derive"]}
log = "0.4.17"
env_logger = "0.9.3"

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
